ply_practice/parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Grammar

Rule 0     S' -> statement
Rule 1     statement -> expression SEMI
Rule 2     list -> LBRACKET in_list RBRACKET
Rule 3     in_list -> expression
Rule 4     in_list -> in_list COMMA expression
Rule 5     tuple -> LPAREN in_tuple RPAREN
Rule 6     in_tuple -> expression COMMA expression
Rule 7     in_tuple -> in_tuple COMMA expression
Rule 8     expression -> expression PLUS expression
Rule 9     expression -> expression MINUS expression
Rule 10    expression -> expression TIMES expression
Rule 11    expression -> expression DIVIDE expression
Rule 12    expression -> expression DIV expression
Rule 13    expression -> expression MOD expression
Rule 14    expression -> expression POW expression
Rule 15    expression -> expression IN expression
Rule 16    expression -> expression CON expression
Rule 17    expression -> expression LESSTHAN expression
Rule 18    expression -> expression LESSTHANEQ expression
Rule 19    expression -> expression EQUAL expression
Rule 20    expression -> expression NOTEQ expression
Rule 21    expression -> expression GREATERTHAN expression
Rule 22    expression -> expression GREATERTHANEQ expression
Rule 23    expression -> expression OR expression
Rule 24    expression -> expression AND expression
Rule 25    index -> expression LBRACKET expression RBRACKET
Rule 26    hash -> HASH NUMBER tuple
Rule 27    expression -> NUMBER
Rule 28    expression -> STR
Rule 29    expression -> list
Rule 30    expression -> TRUE
Rule 31    expression -> FALSE
Rule 32    expression -> index
Rule 33    expression -> tuple
Rule 34    expression -> hash
Rule 35    expression -> LPAREN expression RPAREN
Rule 36    expression -> MINUS expression
Rule 37    expression -> PLUS expression
Rule 38    expression -> NOT expression

Terminals, with rules where they appear

AND                  : 24
COMMA                : 4 6 7
CON                  : 16
DIV                  : 12
DIVIDE               : 11
EQUAL                : 19
FALSE                : 31
GREATERTHAN          : 21
GREATERTHANEQ        : 22
HASH                 : 26
IN                   : 15
LBRACKET             : 2 25
LESSTHAN             : 17
LESSTHANEQ           : 18
LPAREN               : 5 35
MINUS                : 9 36
MOD                  : 13
NOT                  : 38
NOTEQ                : 20
NUMBER               : 26 27
OR                   : 23
PLUS                 : 8 37
POW                  : 14
RBRACKET             : 2 25
RPAREN               : 5 35
SEMI                 : 1
STR                  : 28
TIMES                : 10
TRUE                 : 30
error                : 

Nonterminals, with rules where they appear

expression           : 1 3 4 6 6 7 8 8 9 9 10 10 11 11 12 12 13 13 14 14 15 15 16 16 17 17 18 18 19 19 20 20 21 21 22 22 23 23 24 24 25 25 35 36 37 38
hash                 : 34
in_list              : 2 4
in_tuple             : 5 7
index                : 32
list                 : 29
statement            : 0
tuple                : 26 33

Parsing method: LALR

state 0

    (0) S' -> . statement
    (1) statement -> . expression SEMI
    (8) expression -> . expression PLUS expression
    (9) expression -> . expression MINUS expression
    (10) expression -> . expression TIMES expression
    (11) expression -> . expression DIVIDE expression
    (12) expression -> . expression DIV expression
    (13) expression -> . expression MOD expression
    (14) expression -> . expression POW expression
    (15) expression -> . expression IN expression
    (16) expression -> . expression CON expression
    (17) expression -> . expression LESSTHAN expression
    (18) expression -> . expression LESSTHANEQ expression
    (19) expression -> . expression EQUAL expression
    (20) expression -> . expression NOTEQ expression
    (21) expression -> . expression GREATERTHAN expression
    (22) expression -> . expression GREATERTHANEQ expression
    (23) expression -> . expression OR expression
    (24) expression -> . expression AND expression
    (27) expression -> . NUMBER
    (28) expression -> . STR
    (29) expression -> . list
    (30) expression -> . TRUE
    (31) expression -> . FALSE
    (32) expression -> . index
    (33) expression -> . tuple
    (34) expression -> . hash
    (35) expression -> . LPAREN expression RPAREN
    (36) expression -> . MINUS expression
    (37) expression -> . PLUS expression
    (38) expression -> . NOT expression
    (2) list -> . LBRACKET in_list RBRACKET
    (25) index -> . expression LBRACKET expression RBRACKET
    (5) tuple -> . LPAREN in_tuple RPAREN
    (26) hash -> . HASH NUMBER tuple

    NUMBER          shift and go to state 5
    STR             shift and go to state 6
    TRUE            shift and go to state 8
    FALSE           shift and go to state 9
    LPAREN          shift and go to state 13
    MINUS           shift and go to state 4
    PLUS            shift and go to state 3
    NOT             shift and go to state 14
    LBRACKET        shift and go to state 15
    HASH            shift and go to state 16

    statement                      shift and go to state 1
    expression                     shift and go to state 2
    list                           shift and go to state 7
    index                          shift and go to state 10
    tuple                          shift and go to state 11
    hash                           shift and go to state 12

state 1

    (0) S' -> statement .



state 2

    (1) statement -> expression . SEMI
    (8) expression -> expression . PLUS expression
    (9) expression -> expression . MINUS expression
    (10) expression -> expression . TIMES expression
    (11) expression -> expression . DIVIDE expression
    (12) expression -> expression . DIV expression
    (13) expression -> expression . MOD expression
    (14) expression -> expression . POW expression
    (15) expression -> expression . IN expression
    (16) expression -> expression . CON expression
    (17) expression -> expression . LESSTHAN expression
    (18) expression -> expression . LESSTHANEQ expression
    (19) expression -> expression . EQUAL expression
    (20) expression -> expression . NOTEQ expression
    (21) expression -> expression . GREATERTHAN expression
    (22) expression -> expression . GREATERTHANEQ expression
    (23) expression -> expression . OR expression
    (24) expression -> expression . AND expression
    (25) index -> expression . LBRACKET expression RBRACKET

    SEMI            shift and go to state 17
    PLUS            shift and go to state 18
    MINUS           shift and go to state 19
    TIMES           shift and go to state 20
    DIVIDE          shift and go to state 21
    DIV             shift and go to state 22
    MOD             shift and go to state 23
    POW             shift and go to state 24
    IN              shift and go to state 25
    CON             shift and go to state 26
    LESSTHAN        shift and go to state 27
    LESSTHANEQ      shift and go to state 28
    EQUAL           shift and go to state 29
    NOTEQ           shift and go to state 30
    GREATERTHAN     shift and go to state 31
    GREATERTHANEQ   shift and go to state 32
    OR              shift and go to state 33
    AND             shift and go to state 34
    LBRACKET        shift and go to state 35


state 3

    (37) expression -> PLUS . expression
    (8) expression -> . expression PLUS expression
    (9) expression -> . expression MINUS expression
    (10) expression -> . expression TIMES expression
    (11) expression -> . expression DIVIDE expression
    (12) expression -> . expression DIV expression
    (13) expression -> . expression MOD expression
    (14) expression -> . expression POW expression
    (15) expression -> . expression IN expression
    (16) expression -> . expression CON expression
    (17) expression -> . expression LESSTHAN expression
    (18) expression -> . expression LESSTHANEQ expression
    (19) expression -> . expression EQUAL expression
    (20) expression -> . expression NOTEQ expression
    (21) expression -> . expression GREATERTHAN expression
    (22) expression -> . expression GREATERTHANEQ expression
    (23) expression -> . expression OR expression
    (24) expression -> . expression AND expression
    (27) expression -> . NUMBER
    (28) expression -> . STR
    (29) expression -> . list
    (30) expression -> . TRUE
    (31) expression -> . FALSE
    (32) expression -> . index
    (33) expression -> . tuple
    (34) expression -> . hash
    (35) expression -> . LPAREN expression RPAREN
    (36) expression -> . MINUS expression
    (37) expression -> . PLUS expression
    (38) expression -> . NOT expression
    (2) list -> . LBRACKET in_list RBRACKET
    (25) index -> . expression LBRACKET expression RBRACKET
    (5) tuple -> . LPAREN in_tuple RPAREN
    (26) hash -> . HASH NUMBER tuple

    NUMBER          shift and go to state 5
    STR             shift and go to state 6
    TRUE            shift and go to state 8
    FALSE           shift and go to state 9
    LPAREN          shift and go to state 13
    MINUS           shift and go to state 4
    PLUS            shift and go to state 3
    NOT             shift and go to state 14
    LBRACKET        shift and go to state 15
    HASH            shift and go to state 16

    expression                     shift and go to state 36
    list                           shift and go to state 7
    index                          shift and go to state 10
    tuple                          shift and go to state 11
    hash                           shift and go to state 12

state 4

    (36) expression -> MINUS . expression
    (8) expression -> . expression PLUS expression
    (9) expression -> . expression MINUS expression
    (10) expression -> . expression TIMES expression
    (11) expression -> . expression DIVIDE expression
    (12) expression -> . expression DIV expression
    (13) expression -> . expression MOD expression
    (14) expression -> . expression POW expression
    (15) expression -> . expression IN expression
    (16) expression -> . expression CON expression
    (17) expression -> . expression LESSTHAN expression
    (18) expression -> . expression LESSTHANEQ expression
    (19) expression -> . expression EQUAL expression
    (20) expression -> . expression NOTEQ expression
    (21) expression -> . expression GREATERTHAN expression
    (22) expression -> . expression GREATERTHANEQ expression
    (23) expression -> . expression OR expression
    (24) expression -> . expression AND expression
    (27) expression -> . NUMBER
    (28) expression -> . STR
    (29) expression -> . list
    (30) expression -> . TRUE
    (31) expression -> . FALSE
    (32) expression -> . index
    (33) expression -> . tuple
    (34) expression -> . hash
    (35) expression -> . LPAREN expression RPAREN
    (36) expression -> . MINUS expression
    (37) expression -> . PLUS expression
    (38) expression -> . NOT expression
    (2) list -> . LBRACKET in_list RBRACKET
    (25) index -> . expression LBRACKET expression RBRACKET
    (5) tuple -> . LPAREN in_tuple RPAREN
    (26) hash -> . HASH NUMBER tuple

    NUMBER          shift and go to state 5
    STR             shift and go to state 6
    TRUE            shift and go to state 8
    FALSE           shift and go to state 9
    LPAREN          shift and go to state 13
    MINUS           shift and go to state 4
    PLUS            shift and go to state 3
    NOT             shift and go to state 14
    LBRACKET        shift and go to state 15
    HASH            shift and go to state 16

    expression                     shift and go to state 37
    list                           shift and go to state 7
    index                          shift and go to state 10
    tuple                          shift and go to state 11
    hash                           shift and go to state 12

state 5

    (27) expression -> NUMBER .

    SEMI            reduce using rule 27 (expression -> NUMBER .)
    PLUS            reduce using rule 27 (expression -> NUMBER .)
    MINUS           reduce using rule 27 (expression -> NUMBER .)
    TIMES           reduce using rule 27 (expression -> NUMBER .)
    DIVIDE          reduce using rule 27 (expression -> NUMBER .)
    DIV             reduce using rule 27 (expression -> NUMBER .)
    MOD             reduce using rule 27 (expression -> NUMBER .)
    POW             reduce using rule 27 (expression -> NUMBER .)
    IN              reduce using rule 27 (expression -> NUMBER .)
    CON             reduce using rule 27 (expression -> NUMBER .)
    LESSTHAN        reduce using rule 27 (expression -> NUMBER .)
    LESSTHANEQ      reduce using rule 27 (expression -> NUMBER .)
    EQUAL           reduce using rule 27 (expression -> NUMBER .)
    NOTEQ           reduce using rule 27 (expression -> NUMBER .)
    GREATERTHAN     reduce using rule 27 (expression -> NUMBER .)
    GREATERTHANEQ   reduce using rule 27 (expression -> NUMBER .)
    OR              reduce using rule 27 (expression -> NUMBER .)
    AND             reduce using rule 27 (expression -> NUMBER .)
    LBRACKET        reduce using rule 27 (expression -> NUMBER .)
    RPAREN          reduce using rule 27 (expression -> NUMBER .)
    COMMA           reduce using rule 27 (expression -> NUMBER .)
    RBRACKET        reduce using rule 27 (expression -> NUMBER .)


state 6

    (28) expression -> STR .

    SEMI            reduce using rule 28 (expression -> STR .)
    PLUS            reduce using rule 28 (expression -> STR .)
    MINUS           reduce using rule 28 (expression -> STR .)
    TIMES           reduce using rule 28 (expression -> STR .)
    DIVIDE          reduce using rule 28 (expression -> STR .)
    DIV             reduce using rule 28 (expression -> STR .)
    MOD             reduce using rule 28 (expression -> STR .)
    POW             reduce using rule 28 (expression -> STR .)
    IN              reduce using rule 28 (expression -> STR .)
    CON             reduce using rule 28 (expression -> STR .)
    LESSTHAN        reduce using rule 28 (expression -> STR .)
    LESSTHANEQ      reduce using rule 28 (expression -> STR .)
    EQUAL           reduce using rule 28 (expression -> STR .)
    NOTEQ           reduce using rule 28 (expression -> STR .)
    GREATERTHAN     reduce using rule 28 (expression -> STR .)
    GREATERTHANEQ   reduce using rule 28 (expression -> STR .)
    OR              reduce using rule 28 (expression -> STR .)
    AND             reduce using rule 28 (expression -> STR .)
    LBRACKET        reduce using rule 28 (expression -> STR .)
    RPAREN          reduce using rule 28 (expression -> STR .)
    COMMA           reduce using rule 28 (expression -> STR .)
    RBRACKET        reduce using rule 28 (expression -> STR .)


state 7

    (29) expression -> list .

    SEMI            reduce using rule 29 (expression -> list .)
    PLUS            reduce using rule 29 (expression -> list .)
    MINUS           reduce using rule 29 (expression -> list .)
    TIMES           reduce using rule 29 (expression -> list .)
    DIVIDE          reduce using rule 29 (expression -> list .)
    DIV             reduce using rule 29 (expression -> list .)
    MOD             reduce using rule 29 (expression -> list .)
    POW             reduce using rule 29 (expression -> list .)
    IN              reduce using rule 29 (expression -> list .)
    CON             reduce using rule 29 (expression -> list .)
    LESSTHAN        reduce using rule 29 (expression -> list .)
    LESSTHANEQ      reduce using rule 29 (expression -> list .)
    EQUAL           reduce using rule 29 (expression -> list .)
    NOTEQ           reduce using rule 29 (expression -> list .)
    GREATERTHAN     reduce using rule 29 (expression -> list .)
    GREATERTHANEQ   reduce using rule 29 (expression -> list .)
    OR              reduce using rule 29 (expression -> list .)
    AND             reduce using rule 29 (expression -> list .)
    LBRACKET        reduce using rule 29 (expression -> list .)
    RPAREN          reduce using rule 29 (expression -> list .)
    COMMA           reduce using rule 29 (expression -> list .)
    RBRACKET        reduce using rule 29 (expression -> list .)


state 8

    (30) expression -> TRUE .

    SEMI            reduce using rule 30 (expression -> TRUE .)
    PLUS            reduce using rule 30 (expression -> TRUE .)
    MINUS           reduce using rule 30 (expression -> TRUE .)
    TIMES           reduce using rule 30 (expression -> TRUE .)
    DIVIDE          reduce using rule 30 (expression -> TRUE .)
    DIV             reduce using rule 30 (expression -> TRUE .)
    MOD             reduce using rule 30 (expression -> TRUE .)
    POW             reduce using rule 30 (expression -> TRUE .)
    IN              reduce using rule 30 (expression -> TRUE .)
    CON             reduce using rule 30 (expression -> TRUE .)
    LESSTHAN        reduce using rule 30 (expression -> TRUE .)
    LESSTHANEQ      reduce using rule 30 (expression -> TRUE .)
    EQUAL           reduce using rule 30 (expression -> TRUE .)
    NOTEQ           reduce using rule 30 (expression -> TRUE .)
    GREATERTHAN     reduce using rule 30 (expression -> TRUE .)
    GREATERTHANEQ   reduce using rule 30 (expression -> TRUE .)
    OR              reduce using rule 30 (expression -> TRUE .)
    AND             reduce using rule 30 (expression -> TRUE .)
    LBRACKET        reduce using rule 30 (expression -> TRUE .)
    RPAREN          reduce using rule 30 (expression -> TRUE .)
    COMMA           reduce using rule 30 (expression -> TRUE .)
    RBRACKET        reduce using rule 30 (expression -> TRUE .)


state 9

    (31) expression -> FALSE .

    SEMI            reduce using rule 31 (expression -> FALSE .)
    PLUS            reduce using rule 31 (expression -> FALSE .)
    MINUS           reduce using rule 31 (expression -> FALSE .)
    TIMES           reduce using rule 31 (expression -> FALSE .)
    DIVIDE          reduce using rule 31 (expression -> FALSE .)
    DIV             reduce using rule 31 (expression -> FALSE .)
    MOD             reduce using rule 31 (expression -> FALSE .)
    POW             reduce using rule 31 (expression -> FALSE .)
    IN              reduce using rule 31 (expression -> FALSE .)
    CON             reduce using rule 31 (expression -> FALSE .)
    LESSTHAN        reduce using rule 31 (expression -> FALSE .)
    LESSTHANEQ      reduce using rule 31 (expression -> FALSE .)
    EQUAL           reduce using rule 31 (expression -> FALSE .)
    NOTEQ           reduce using rule 31 (expression -> FALSE .)
    GREATERTHAN     reduce using rule 31 (expression -> FALSE .)
    GREATERTHANEQ   reduce using rule 31 (expression -> FALSE .)
    OR              reduce using rule 31 (expression -> FALSE .)
    AND             reduce using rule 31 (expression -> FALSE .)
    LBRACKET        reduce using rule 31 (expression -> FALSE .)
    RPAREN          reduce using rule 31 (expression -> FALSE .)
    COMMA           reduce using rule 31 (expression -> FALSE .)
    RBRACKET        reduce using rule 31 (expression -> FALSE .)


state 10

    (32) expression -> index .

    SEMI            reduce using rule 32 (expression -> index .)
    PLUS            reduce using rule 32 (expression -> index .)
    MINUS           reduce using rule 32 (expression -> index .)
    TIMES           reduce using rule 32 (expression -> index .)
    DIVIDE          reduce using rule 32 (expression -> index .)
    DIV             reduce using rule 32 (expression -> index .)
    MOD             reduce using rule 32 (expression -> index .)
    POW             reduce using rule 32 (expression -> index .)
    IN              reduce using rule 32 (expression -> index .)
    CON             reduce using rule 32 (expression -> index .)
    LESSTHAN        reduce using rule 32 (expression -> index .)
    LESSTHANEQ      reduce using rule 32 (expression -> index .)
    EQUAL           reduce using rule 32 (expression -> index .)
    NOTEQ           reduce using rule 32 (expression -> index .)
    GREATERTHAN     reduce using rule 32 (expression -> index .)
    GREATERTHANEQ   reduce using rule 32 (expression -> index .)
    OR              reduce using rule 32 (expression -> index .)
    AND             reduce using rule 32 (expression -> index .)
    LBRACKET        reduce using rule 32 (expression -> index .)
    RPAREN          reduce using rule 32 (expression -> index .)
    COMMA           reduce using rule 32 (expression -> index .)
    RBRACKET        reduce using rule 32 (expression -> index .)


state 11

    (33) expression -> tuple .

    SEMI            reduce using rule 33 (expression -> tuple .)
    PLUS            reduce using rule 33 (expression -> tuple .)
    MINUS           reduce using rule 33 (expression -> tuple .)
    TIMES           reduce using rule 33 (expression -> tuple .)
    DIVIDE          reduce using rule 33 (expression -> tuple .)
    DIV             reduce using rule 33 (expression -> tuple .)
    MOD             reduce using rule 33 (expression -> tuple .)
    POW             reduce using rule 33 (expression -> tuple .)
    IN              reduce using rule 33 (expression -> tuple .)
    CON             reduce using rule 33 (expression -> tuple .)
    LESSTHAN        reduce using rule 33 (expression -> tuple .)
    LESSTHANEQ      reduce using rule 33 (expression -> tuple .)
    EQUAL           reduce using rule 33 (expression -> tuple .)
    NOTEQ           reduce using rule 33 (expression -> tuple .)
    GREATERTHAN     reduce using rule 33 (expression -> tuple .)
    GREATERTHANEQ   reduce using rule 33 (expression -> tuple .)
    OR              reduce using rule 33 (expression -> tuple .)
    AND             reduce using rule 33 (expression -> tuple .)
    LBRACKET        reduce using rule 33 (expression -> tuple .)
    RPAREN          reduce using rule 33 (expression -> tuple .)
    COMMA           reduce using rule 33 (expression -> tuple .)
    RBRACKET        reduce using rule 33 (expression -> tuple .)


state 12

    (34) expression -> hash .

    SEMI            reduce using rule 34 (expression -> hash .)
    PLUS            reduce using rule 34 (expression -> hash .)
    MINUS           reduce using rule 34 (expression -> hash .)
    TIMES           reduce using rule 34 (expression -> hash .)
    DIVIDE          reduce using rule 34 (expression -> hash .)
    DIV             reduce using rule 34 (expression -> hash .)
    MOD             reduce using rule 34 (expression -> hash .)
    POW             reduce using rule 34 (expression -> hash .)
    IN              reduce using rule 34 (expression -> hash .)
    CON             reduce using rule 34 (expression -> hash .)
    LESSTHAN        reduce using rule 34 (expression -> hash .)
    LESSTHANEQ      reduce using rule 34 (expression -> hash .)
    EQUAL           reduce using rule 34 (expression -> hash .)
    NOTEQ           reduce using rule 34 (expression -> hash .)
    GREATERTHAN     reduce using rule 34 (expression -> hash .)
    GREATERTHANEQ   reduce using rule 34 (expression -> hash .)
    OR              reduce using rule 34 (expression -> hash .)
    AND             reduce using rule 34 (expression -> hash .)
    LBRACKET        reduce using rule 34 (expression -> hash .)
    RPAREN          reduce using rule 34 (expression -> hash .)
    COMMA           reduce using rule 34 (expression -> hash .)
    RBRACKET        reduce using rule 34 (expression -> hash .)


state 13

    (35) expression -> LPAREN . expression RPAREN
    (5) tuple -> LPAREN . in_tuple RPAREN
    (8) expression -> . expression PLUS expression
    (9) expression -> . expression MINUS expression
    (10) expression -> . expression TIMES expression
    (11) expression -> . expression DIVIDE expression
    (12) expression -> . expression DIV expression
    (13) expression -> . expression MOD expression
    (14) expression -> . expression POW expression
    (15) expression -> . expression IN expression
    (16) expression -> . expression CON expression
    (17) expression -> . expression LESSTHAN expression
    (18) expression -> . expression LESSTHANEQ expression
    (19) expression -> . expression EQUAL expression
    (20) expression -> . expression NOTEQ expression
    (21) expression -> . expression GREATERTHAN expression
    (22) expression -> . expression GREATERTHANEQ expression
    (23) expression -> . expression OR expression
    (24) expression -> . expression AND expression
    (27) expression -> . NUMBER
    (28) expression -> . STR
    (29) expression -> . list
    (30) expression -> . TRUE
    (31) expression -> . FALSE
    (32) expression -> . index
    (33) expression -> . tuple
    (34) expression -> . hash
    (35) expression -> . LPAREN expression RPAREN
    (36) expression -> . MINUS expression
    (37) expression -> . PLUS expression
    (38) expression -> . NOT expression
    (6) in_tuple -> . expression COMMA expression
    (7) in_tuple -> . in_tuple COMMA expression
    (2) list -> . LBRACKET in_list RBRACKET
    (25) index -> . expression LBRACKET expression RBRACKET
    (5) tuple -> . LPAREN in_tuple RPAREN
    (26) hash -> . HASH NUMBER tuple

    NUMBER          shift and go to state 5
    STR             shift and go to state 6
    TRUE            shift and go to state 8
    FALSE           shift and go to state 9
    LPAREN          shift and go to state 13
    MINUS           shift and go to state 4
    PLUS            shift and go to state 3
    NOT             shift and go to state 14
    LBRACKET        shift and go to state 15
    HASH            shift and go to state 16

    expression                     shift and go to state 38
    in_tuple                       shift and go to state 39
    list                           shift and go to state 7
    index                          shift and go to state 10
    tuple                          shift and go to state 11
    hash                           shift and go to state 12

state 14

    (38) expression -> NOT . expression
    (8) expression -> . expression PLUS expression
    (9) expression -> . expression MINUS expression
    (10) expression -> . expression TIMES expression
    (11) expression -> . expression DIVIDE expression
    (12) expression -> . expression DIV expression
    (13) expression -> . expression MOD expression
    (14) expression -> . expression POW expression
    (15) expression -> . expression IN expression
    (16) expression -> . expression CON expression
    (17) expression -> . expression LESSTHAN expression
    (18) expression -> . expression LESSTHANEQ expression
    (19) expression -> . expression EQUAL expression
    (20) expression -> . expression NOTEQ expression
    (21) expression -> . expression GREATERTHAN expression
    (22) expression -> . expression GREATERTHANEQ expression
    (23) expression -> . expression OR expression
    (24) expression -> . expression AND expression
    (27) expression -> . NUMBER
    (28) expression -> . STR
    (29) expression -> . list
    (30) expression -> . TRUE
    (31) expression -> . FALSE
    (32) expression -> . index
    (33) expression -> . tuple
    (34) expression -> . hash
    (35) expression -> . LPAREN expression RPAREN
    (36) expression -> . MINUS expression
    (37) expression -> . PLUS expression
    (38) expression -> . NOT expression
    (2) list -> . LBRACKET in_list RBRACKET
    (25) index -> . expression LBRACKET expression RBRACKET
    (5) tuple -> . LPAREN in_tuple RPAREN
    (26) hash -> . HASH NUMBER tuple

    NUMBER          shift and go to state 5
    STR             shift and go to state 6
    TRUE            shift and go to state 8
    FALSE           shift and go to state 9
    LPAREN          shift and go to state 13
    MINUS           shift and go to state 4
    PLUS            shift and go to state 3
    NOT             shift and go to state 14
    LBRACKET        shift and go to state 15
    HASH            shift and go to state 16

    expression                     shift and go to state 40
    list                           shift and go to state 7
    index                          shift and go to state 10
    tuple                          shift and go to state 11
    hash                           shift and go to state 12

state 15

    (2) list -> LBRACKET . in_list RBRACKET
    (3) in_list -> . expression
    (4) in_list -> . in_list COMMA expression
    (8) expression -> . expression PLUS expression
    (9) expression -> . expression MINUS expression
    (10) expression -> . expression TIMES expression
    (11) expression -> . expression DIVIDE expression
    (12) expression -> . expression DIV expression
    (13) expression -> . expression MOD expression
    (14) expression -> . expression POW expression
    (15) expression -> . expression IN expression
    (16) expression -> . expression CON expression
    (17) expression -> . expression LESSTHAN expression
    (18) expression -> . expression LESSTHANEQ expression
    (19) expression -> . expression EQUAL expression
    (20) expression -> . expression NOTEQ expression
    (21) expression -> . expression GREATERTHAN expression
    (22) expression -> . expression GREATERTHANEQ expression
    (23) expression -> . expression OR expression
    (24) expression -> . expression AND expression
    (27) expression -> . NUMBER
    (28) expression -> . STR
    (29) expression -> . list
    (30) expression -> . TRUE
    (31) expression -> . FALSE
    (32) expression -> . index
    (33) expression -> . tuple
    (34) expression -> . hash
    (35) expression -> . LPAREN expression RPAREN
    (36) expression -> . MINUS expression
    (37) expression -> . PLUS expression
    (38) expression -> . NOT expression
    (2) list -> . LBRACKET in_list RBRACKET
    (25) index -> . expression LBRACKET expression RBRACKET
    (5) tuple -> . LPAREN in_tuple RPAREN
    (26) hash -> . HASH NUMBER tuple

    NUMBER          shift and go to state 5
    STR             shift and go to state 6
    TRUE            shift and go to state 8
    FALSE           shift and go to state 9
    LPAREN          shift and go to state 13
    MINUS           shift and go to state 4
    PLUS            shift and go to state 3
    NOT             shift and go to state 14
    LBRACKET        shift and go to state 15
    HASH            shift and go to state 16

    in_list                        shift and go to state 41
    expression                     shift and go to state 42
    list                           shift and go to state 7
    index                          shift and go to state 10
    tuple                          shift and go to state 11
    hash                           shift and go to state 12

state 16

    (26) hash -> HASH . NUMBER tuple

    NUMBER          shift and go to state 43


state 17

    (1) statement -> expression SEMI .

    $end            reduce using rule 1 (statement -> expression SEMI .)


state 18

    (8) expression -> expression PLUS . expression
    (8) expression -> . expression PLUS expression
    (9) expression -> . expression MINUS expression
    (10) expression -> . expression TIMES expression
    (11) expression -> . expression DIVIDE expression
    (12) expression -> . expression DIV expression
    (13) expression -> . expression MOD expression
    (14) expression -> . expression POW expression
    (15) expression -> . expression IN expression
    (16) expression -> . expression CON expression
    (17) expression -> . expression LESSTHAN expression
    (18) expression -> . expression LESSTHANEQ expression
    (19) expression -> . expression EQUAL expression
    (20) expression -> . expression NOTEQ expression
    (21) expression -> . expression GREATERTHAN expression
    (22) expression -> . expression GREATERTHANEQ expression
    (23) expression -> . expression OR expression
    (24) expression -> . expression AND expression
    (27) expression -> . NUMBER
    (28) expression -> . STR
    (29) expression -> . list
    (30) expression -> . TRUE
    (31) expression -> . FALSE
    (32) expression -> . index
    (33) expression -> . tuple
    (34) expression -> . hash
    (35) expression -> . LPAREN expression RPAREN
    (36) expression -> . MINUS expression
    (37) expression -> . PLUS expression
    (38) expression -> . NOT expression
    (2) list -> . LBRACKET in_list RBRACKET
    (25) index -> . expression LBRACKET expression RBRACKET
    (5) tuple -> . LPAREN in_tuple RPAREN
    (26) hash -> . HASH NUMBER tuple

    NUMBER          shift and go to state 5
    STR             shift and go to state 6
    TRUE            shift and go to state 8
    FALSE           shift and go to state 9
    LPAREN          shift and go to state 13
    MINUS           shift and go to state 4
    PLUS            shift and go to state 3
    NOT             shift and go to state 14
    LBRACKET        shift and go to state 15
    HASH            shift and go to state 16

    expression                     shift and go to state 44
    list                           shift and go to state 7
    index                          shift and go to state 10
    tuple                          shift and go to state 11
    hash                           shift and go to state 12

state 19

    (9) expression -> expression MINUS . expression
    (8) expression -> . expression PLUS expression
    (9) expression -> . expression MINUS expression
    (10) expression -> . expression TIMES expression
    (11) expression -> . expression DIVIDE expression
    (12) expression -> . expression DIV expression
    (13) expression -> . expression MOD expression
    (14) expression -> . expression POW expression
    (15) expression -> . expression IN expression
    (16) expression -> . expression CON expression
    (17) expression -> . expression LESSTHAN expression
    (18) expression -> . expression LESSTHANEQ expression
    (19) expression -> . expression EQUAL expression
    (20) expression -> . expression NOTEQ expression
    (21) expression -> . expression GREATERTHAN expression
    (22) expression -> . expression GREATERTHANEQ expression
    (23) expression -> . expression OR expression
    (24) expression -> . expression AND expression
    (27) expression -> . NUMBER
    (28) expression -> . STR
    (29) expression -> . list
    (30) expression -> . TRUE
    (31) expression -> . FALSE
    (32) expression -> . index
    (33) expression -> . tuple
    (34) expression -> . hash
    (35) expression -> . LPAREN expression RPAREN
    (36) expression -> . MINUS expression
    (37) expression -> . PLUS expression
    (38) expression -> . NOT expression
    (2) list -> . LBRACKET in_list RBRACKET
    (25) index -> . expression LBRACKET expression RBRACKET
    (5) tuple -> . LPAREN in_tuple RPAREN
    (26) hash -> . HASH NUMBER tuple

    NUMBER          shift and go to state 5
    STR             shift and go to state 6
    TRUE            shift and go to state 8
    FALSE           shift and go to state 9
    LPAREN          shift and go to state 13
    MINUS           shift and go to state 4
    PLUS            shift and go to state 3
    NOT             shift and go to state 14
    LBRACKET        shift and go to state 15
    HASH            shift and go to state 16

    expression                     shift and go to state 45
    list                           shift and go to state 7
    index                          shift and go to state 10
    tuple                          shift and go to state 11
    hash                           shift and go to state 12

state 20

    (10) expression -> expression TIMES . expression
    (8) expression -> . expression PLUS expression
    (9) expression -> . expression MINUS expression
    (10) expression -> . expression TIMES expression
    (11) expression -> . expression DIVIDE expression
    (12) expression -> . expression DIV expression
    (13) expression -> . expression MOD expression
    (14) expression -> . expression POW expression
    (15) expression -> . expression IN expression
    (16) expression -> . expression CON expression
    (17) expression -> . expression LESSTHAN expression
    (18) expression -> . expression LESSTHANEQ expression
    (19) expression -> . expression EQUAL expression
    (20) expression -> . expression NOTEQ expression
    (21) expression -> . expression GREATERTHAN expression
    (22) expression -> . expression GREATERTHANEQ expression
    (23) expression -> . expression OR expression
    (24) expression -> . expression AND expression
    (27) expression -> . NUMBER
    (28) expression -> . STR
    (29) expression -> . list
    (30) expression -> . TRUE
    (31) expression -> . FALSE
    (32) expression -> . index
    (33) expression -> . tuple
    (34) expression -> . hash
    (35) expression -> . LPAREN expression RPAREN
    (36) expression -> . MINUS expression
    (37) expression -> . PLUS expression
    (38) expression -> . NOT expression
    (2) list -> . LBRACKET in_list RBRACKET
    (25) index -> . expression LBRACKET expression RBRACKET
    (5) tuple -> . LPAREN in_tuple RPAREN
    (26) hash -> . HASH NUMBER tuple

    NUMBER          shift and go to state 5
    STR             shift and go to state 6
    TRUE            shift and go to state 8
    FALSE           shift and go to state 9
    LPAREN          shift and go to state 13
    MINUS           shift and go to state 4
    PLUS            shift and go to state 3
    NOT             shift and go to state 14
    LBRACKET        shift and go to state 15
    HASH            shift and go to state 16

    expression                     shift and go to state 46
    list                           shift and go to state 7
    index                          shift and go to state 10
    tuple                          shift and go to state 11
    hash                           shift and go to state 12

state 21
